Guard close-time inventory returns and record initial live measurements